--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: youheng.lue@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   On this website I'm writing down Tips for common problems I had as well as
   my CV (Youheng Lü) for recruiters.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "goreil_blog" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: 
 github_username:  Youheng-Lue
 
